Alignment fix

--- a/src/App.css
+++ b/src/App.css
@@ -51,7 +51,7 @@
 .circle{
   position: absolute;
   top: 30%;
-  left: 63.5%;
+  left: 65.25%;
   border: 0.1px solid #F3EFE6;
   border-radius: 50%;
   width: 300px;
